# alacod

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile.builder  Makefile  README.md  docker-compose.yaml  milestone.md
.github/instructions/: ggrs-rollback-rules.instruction.md
.github/workflows/: main.yaml  pr.yaml  release.yaml
assets/: camera.ron
assets/ZombieShooter/Sprites/Character/: player_animation.ron  player_config.ron  slash_animation.ron  slash_sheet.ron  weapons.ron
assets/ZombieShooter/Sprites/Zombie/: zombie_animation.ron  zombie_config.ron  zombie_full_animation.ron  zombie_full_config.ron  zombie_full_sheet.ron  zombie_hard_config.ron
assets/exemples/: test_map.ldtk
assets/waves/: wave_config.ron
assets/weapons/melee/: bare_hands.ron  club.ron  knife.ron  melee_weapons.ron  sword.ron
crates/animation/: Cargo.toml
crates/animation/src/: lib.rs
crates/bevy_fixed/: Cargo.toml
crates/bevy_fixed/src/: fixed_math.rs  lib.rs  math.rs  rng.rs
crates/game/: Cargo.toml  build.rs
crates/game/src/: core.rs  debug.rs  frame.rs  global_asset.rs  interaction.rs  jjrs.rs  lib.rs  plugins.rs  system_set.rs
crates/game/src/args/: cli.rs  mod.rs  web.rs
crates/game/src/audio/: adaptive.rs  mod.rs
crates/game/src/camera/: mod.rs  ui.rs
crates/game/src/character/: config.rs  create.rs  dash.rs  mod.rs  movement.rs
crates/game/src/character/enemy/: create.rs  mod.rs  spawning.rs
crates/game/src/character/enemy/ai/: behavior.rs  combat.rs  debug.rs  mod.rs  navigation.rs  obstacle.rs  pathing.rs  state.rs
crates/game/src/character/health/: mod.rs  ui.rs
crates/game/src/character/player/: control.rs  create.rs  input.rs  jjrs.rs  mod.rs
crates/game/src/collider/: debug.rs  mod.rs
crates/game/src/jjrs/: local.rs  mod.rs  p2p.rs
crates/game/src/light/: mod.rs
crates/game/src/ui/: disconnected.rs  game_over.rs  lobby.rs  mod.rs
crates/game/src/waves/: config.rs  debug.rs  mod.rs  state.rs  systems.rs  tracking.rs
crates/game/src/weapons/: melee.rs  mod.rs  ui.rs
crates/map/: Cargo.toml
crates/map/src/: lib.rs
crates/map/src/game/: mod.rs
crates/map/src/game/entity/: mod.rs
crates/map/src/game/entity/map/: door.rs  enemy_spawn.rs  level_id.rs  map_rollback.rs  mod.rs  player_spawn.rs  room.rs  window.rs
crates/map/src/generation/: context.rs  mod.rs  room.rs
crates/map/src/generation/entity/: door.rs  enemy_spawn.rs  mod.rs  player_spawn.rs
crates/map/src/generation/imp/: basic.rs
crates/map/src/ldtk/game/entity/: door.rs
crates/map_ldtk/: Cargo.toml
crates/map_ldtk/src/: lib.rs  map_const.rs  plugins.rs
crates/map_ldtk/src/game/: collider.rs  mod.rs  plugin.rs  utility.rs
crates/map_ldtk/src/game/entity/: door.rs  enemy_spawn.rs  mod.rs  player_spawn.rs  window.rs
crates/map_ldtk/src/game/system/: add_level_components.rs
crates/map_ldtk/src/generation/: from.rs  mod.rs  to.rs
crates/map_ldtk/src/loader/: file.rs  mod.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: lib.rs  panic.rs
crates/utils/: Cargo.toml
crates/utils/src/: cid.rs  fixed_math.rs  frame.rs  lib.rs  logs.rs  macreau.rs  net_id.rs
crates/utils/src/camera/: tod.rs
crates/utils/src/web/: logs.rs  mod.rs
examples/: character_tester.rs  map_explorer.rs  map_generation.rs  map_preview.rs
examples/args/: cli.rs  mod.rs
website/: Dockerfile  package-lock.json  package.json  vite.config.ts
website/src/: app.css  app.html  service-worker.js
website/src/lib/: Title.svelte  argon2-shim.js
website/src/lib/components/: GameLoader.svelte  UserMenu.svelte
website/src/lib/game/: DevProgress.svelte  GameCard.svelte  applications.json
website/src/lib/layouts/: Card.svelte  CardGrid.svelte
website/src/routes/: +layout.svelte  +page.svelte
website/src/routes/games/: +page.svelte
website/src/routes/online/: +page.svelte
website/src/routes/play/: +page.svelte
website/src/routes/settings/: +page.svelte  settingsStore.ts
website/static/: loader.html  loader.js
