[package]
name = "alacod"
description = ""
version = "0.0.1"
edition = "2021"
exclude = ["assets/*", "repo/*", "scripts/*"]

[features]
default = []

native = [
  "bevy/file_watcher"
]

[workspace]
members = [ "crates/*" ]

[dependencies]
bevy_ecs_tilemap = { version = "0.15", default-features = false }
bevy_ecs_ldtk = { version = "0.11", default-features = true }
bevy = { version = "0.15", default-features = false, features = [
  "bevy_sprite", "bevy_render", "bevy_core_pipeline", "webgl2", "png", "multi_threaded"
]}

serde_json = "1.0"


utils = { path = "./crates/utils" }
map = { path = "./crates/map" }
game = { path = "./crates/game" }
map_ldtk = { path = "./crates/map_ldtk" }

[package.metadata.docs.rs]
all-features = true

[[example]]
name = "map_preview"
path = "examples/map_preview.rs"

[[example]]
name = "map_generation"
path = "examples/map_generation.rs"

[[example]]
name = "character_tester"
path = "examples/character_tester.rs"

[patch.crates-io]
bevy_ecs_ldtk = { git = "https://github.com/bascanada/bevy_ecs_ldtk", branch = "transform_ldtk_project" }


