[package]
name = "alacod"
description = ""
version = "0.0.1"
edition = "2021"
exclude = ["assets/*", "repo/*", "scripts/*"]

[features]
default = ["lighting"]

lighting = ["game/lighting"]

native = [
  "bevy/file_watcher",
  "game/debug_ui"
]

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1

# Workaround for macOS 26 (Sequoia) objc2-foundation issue
# Disable debug assertions in objc2 to avoid runtime panics
# See: https://github.com/madsmtm/objc2/issues/765
[profile.dev.package.objc2]
debug-assertions = false

[profile.dev.package.objc2-encode]
debug-assertions = false

[workspace]
members = [ "crates/*" ]

[dependencies]
bevy_ecs_tilemap = { version = "0.17.0", default-features = false }
bevy_ecs_ldtk = { version = "0.13", default-features = true }
bevy = { version = "0.17", default-features = false, features = [
  "bevy_sprite", "bevy_render", "bevy_core_pipeline", "webgl2", "png", "multi_threaded"
]}
bevy_ggrs = "0.19.0"

serde_json = "1.0"

utils = { path = "./crates/utils" }
map = { path = "./crates/map" }
game = { path = "./crates/game" }
map_ldtk = { path = "./crates/map_ldtk" }
bevy_fixed = { path = "./crates/bevy_fixed" }
animation = { path = "./crates/animation" }

[package.metadata.docs.rs]
all-features = true

[[example]]
name = "map_preview"
path = "examples/map_preview.rs"

[[example]]
name = "map_explorer"
path = "examples/map_explorer.rs"

[[example]]
name = "map_generation"
path = "examples/map_generation.rs"

[[example]]
name = "character_tester"
path = "examples/character_tester.rs"

[patch.crates-io]
bevy_ecs_ldtk = { git = "https://github.com/bascanada/bevy_ecs_ldtk", branch = "transform_ldtk_project" }
