
[package]
name = "game"
version = "0.2.0"
edition = "2021"

[dependencies]
bevy = "0.15"
ggrs = "0.11.0"
bevy_ggrs = "0.17.0"
bevy_kira_audio ={ version = "0.22" }
bevy_matchbox = { version = "0.11", features = ["ggrs"] }
leafwing-input-manager = "0.16.0"
bevy_common_assets = { version = "0.12", features = ["ron"]}

bevy_fixed = { path = "../bevy_fixed"}
utils = { path = "../utils"}
map = { path = "../map"}
animation ={ path = "../animation"}

thiserror = "2.0.12"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19.0"
pathfinding = "4.9.1"
lazy_static = "1.5.0"

clap = { version = "4.4", features = ["derive"] }

[dev-dependencies]
bevy-inspector-egui = "0.30.0"


[dependencies.web-sys]
version = "0.3"
# Enable features for the APIs we need
features = [
  'Window',
  'Location',
  'UrlSearchParams', # Provides easy parsing of query strings
]
