
[package]
name = "game"
version = "0.2.0"
edition = "2021"

[dependencies]
bevy = "0.16"
ggrs = "0.11.1"
bevy_ggrs = "0.18.0"
bevy_kira_audio ={ version = "0.23" }
bevy_matchbox = { version = "0.12", features = ["ggrs"] }
bevy_light_2d = "0.6"
leafwing-input-manager = "0.17.0"
bevy_common_assets = { version = "0.13", features = ["ron"]}

bevy_fixed = { path = "../bevy_fixed"}
utils = { path = "../utils"}
map = { path = "../map"}
animation ={ path = "../animation"}

thiserror = "2.0.12"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19.0"
pathfinding = "4.9.1"
lazy_static = "1.5.0"

wasm-bindgen = "0.2"

clap = { version = "4.4", features = ["derive"] }

bevy-inspector-egui = { version = "0.31.0", optional = true }


[dependencies.web-sys]
version = "0.3"
# Enable features for the APIs we need
features = [
  'Window',
  'Location',
  'UrlSearchParams', # Provides easy parsing of query strings
]

[features]
# Enable debug UI (Egui / World Inspector) for development builds
debug_ui = ["bevy-inspector-egui"]
