
[package]
name = "map"
version = "0.2.0"
edition = "2021"

[dependencies]
bevy = "0.17"
bevy_ecs_ldtk = { version = "0.13", default-features = true }

bevy_fixed = { path = "../bevy_fixed"}
utils = { path = "../utils"}

thiserror = "2.0.12"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19.0"
pathfinding = "4.9.1"

bevy-inspector-egui = { version = "0.31.0", optional = true }

[features]
debug_ui = ["bevy-inspector-egui"]