[package]
name = "map_ldtk"
version = "0.2.0"
edition = "2021"

[dependencies]
bevy = "0.16"
bevy_ecs_ldtk = { version = "0.12", default-features = true }

map = { path = "../map"}
game = { path = "../game"}
utils = { path = "../utils"}

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19.0"
uuid = "1.11.0"

bevy-inspector-egui = "0.31.0"