[package]
name = "utils"
version = "0.2.0"
edition = "2021"

[dependencies]
bevy = "0.15"
bevy_ggrs = "0.17.0"

serde = { version = "1.0", features = ["derive"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "registry"] }
tracing-appender = "0.2"
chrono = "0.4"

wasm-bindgen = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
web-sys = "0.3.68"