[package]
name = "utils"
version = "0.2.0"
edition = "2021"

[dependencies]
bevy = { version = "0.16", default-features = false }
bevy_ggrs = "0.18.0"

serde = { version = "1.0", features = ["derive"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter", "registry"] }
tracing-web = { version = "0.1" }
tracing-appender = "0.2"

rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }

wasm-bindgen = "0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
chrono = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
web-sys = "0.3.68"